# tx2_codes

./: launch_detection.sh  zed2_api.sh
arucoDetection/: CMakeLists.txt
arucoDetection/launch/: detection_rover.launch  launch_zed_with_api.launch
arucoDetection/src/: arucoDetection.cpp  postTravChala.cpp  test.cpp  zed_api.py
arucoDetection/zed-api/: zed_chala.py
beginner_tutorials/: CMakeLists.txt  \  package.xml
beginner_tutorials/launch/: globalPlanner.launch  pc_to_laser.launch
beginner_tutorials/src/: .pwm.py.swo  .pwm.py.swp  .pwm_chala.py.swn  .pwm_chala.py.swo  2q  att.cpp  att.h  chala.py  globalPlanner.cpp  globalPlanner.h  gp.cpp  imu.py  imu2.py  imu_client.py  imu_service.py  obs_avd.py  obs_chala.py  pcl_obs.cpp  pwm.py  pwm_chala.py  pwm_direct.py  pwm_left.py  pwm_new.py  pwm_right.py  pwm_ros.py  pwm_stm_chala.py  pwm_thread.py  pwm_thread.py~  rtk.py  searchPattern.cpp  searchPattern.h  zed_chala.py
beginner_tutorials/srv/: imu.srv
rover/: CMakeLists.txt  package.xml
rover/config/: globalPlanner.yaml
rover/include/rover/: pclProcessing.h
rover/launch/: globalPlanner.launch  new.launch  realsense.launch  urc_rviz.launch  urc_world.launch
rover/msg/: Quaternion.msg  free_sectors.msg  num_clusters.msg  obstacle_info.msg  pcl_processing.msg
rover/src/: globalPlanner.cpp  globalPlanner.h  pclProcessing.cpp  pclProcessing.h  pclProcessingforLidar.cpp  pclProcessingforRealsense.cpp  pclProcessingforSimulation-IRC.cpp  pclProcessingforSimulation.cpp  pcl_testing_obb.cpp  recoveryBehavior.cpp  temp.cpp
rover/urdf/: IMU.gazebo  backup.xacro  lidar.gazebo  realsense_cam_new.gazebo  rover.gazebo  rover.xacro  rover_4.xacro
sick/: CMakeLists.txt  package.xml
sick/src/: .laserScan.cpp.swp  .laserscan.cpp.swo  .laserscan.cpp.swp  .obs.cpp.swp  laserScan.cpp  obs_chala.py  pcl.cpp  pclLaser.cpp  pcl_obs.cpp
urc_2022/: CMakeLists.txt  package.xml
urc_2022/config/: globalPlanner.yaml
urc_2022/include/urc_2022/: arucoDetection.h  obstacle.h  planners.h
urc_2022/launch/: detection_rover.launch  urc_all.launch
urc_2022/src/: arucoDetection.cpp  obstacle.cpp  planners.cpp  postTravChala.cpp  socket_pwm_client.cpp  urc_chala_node.cpp
